--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,14 @@
           "skipTests": true
         }
       },
-      "prefix": "jhi",
-      "architect": {}
+      "prefix": "x",
+      "architect": {
+        "build": {
+          "options": {
+            "styles": ["src/main/webapp/content/scss/theme.less"]
+          }
+        }
+      }
     }
   },
   "defaultProject": "jhonline",
