--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "echarts": "4.2.1",
     "moment": "2.24.0",
     "ng-jhipster": "0.12.0",
+    "ng-zorro-antd": "^9.1.2",
     "ngx-cookie": "4.0.2",
     "ngx-echarts": "4.2.2",
     "ngx-infinite-scroll": "8.0.1",
@@ -45,13 +46,13 @@
     "@angular/compiler-cli": "9.0.4",
     "@ngtools/webpack": "9.0.4",
     "@openapitools/openapi-generator-cli": "1.0.10-4.2.3",
+    "@types/echarts": "^4.6.0",
+    "@types/google.analytics": "0.0.40",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.17",
     "@typescript-eslint/eslint-plugin": "2.11.0",
     "@typescript-eslint/eslint-plugin-tslint": "2.11.0",
     "@typescript-eslint/parser": "2.11.0",
-    "@types/echarts": "^4.6.0",
-    "@types/google.analytics": "0.0.40",
     "autoprefixer": "9.7.3",
     "base-href-webpack-plugin": "2.0.0",
     "browser-sync": "2.26.7",
