--- a/package.json
+++ b/package.json
@@ -11,6 +11,30 @@
   "cacheDirectories": [
     "node_modules"
   ],
+  "scripts": {
+    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,ts,css,scss,yml}\"",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "yarn run lint --fix",
+    "ngc": "ngc -p tsconfig.app.json",
+    "cleanup": "rimraf target/classes/static/{index.html,favicon.ico,manifest.webapp,robots.txt,app/,content/,swagger-ui/} target/classes/aot",
+    "clean-www": "rimraf target/classes/static/app/{src,target/}",
+    "start": "yarn run webpack:dev",
+    "start-tls": "yarn run webpack:dev --env.tls",
+    "serve": "yarn run start",
+    "build": "yarn run webpack:prod",
+    "test": "yarn run lint && jest --coverage --logHeapUsage -w=2 --config src/test/javascript/jest.conf.js",
+    "test:watch": "yarn run test --watch",
+    "webpack:dev": "yarn run webpack-dev-server --config webpack/webpack.dev.js --inline --hot --port=9060 --watch-content-base --env.stats=minimal",
+    "webpack:dev-verbose": "yarn run webpack-dev-server --config webpack/webpack.dev.js --inline --hot --port=9060 --watch-content-base --profile --progress --env.stats=normal",
+    "webpack:build:main": "yarn run webpack --config webpack/webpack.dev.js --env.stats=minimal",
+    "webpack:build": "yarn run cleanup && yarn run webpack:build:main",
+    "webpack:prod:main": "yarn run webpack --config webpack/webpack.prod.js --profile",
+    "webpack:prod": "yarn run cleanup && yarn run webpack:prod:main && yarn run clean-www",
+    "webpack:test": "yarn run test",
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
+    "update-jdl-studio": "cd src/main/resources/static/jdl-studio && git pull origin gh-pages && cd .. && git add jdl-studio && git commit -m 'jdl-studio submodule updated'"
+  },
   "dependencies": {
     "@angular/animations": "^9.1.11",
     "@angular/common": "9.0.4",
@@ -26,13 +50,10 @@
     "@fortawesome/free-brands-svg-icons": "5.12.0",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
-    "@ngx-translate/core": "11.0.1",
-    "@ngx-translate/http-loader": "4.0.0",
     "bootstrap": "4.4.1",
     "echarts": "4.2.1",
     "moment": "2.24.0",
     "ng-jhipster": "0.12.0",
-    "ng-zorro-antd": "^9.1.2",
     "ngx-cookie": "4.0.2",
     "ngx-echarts": "4.2.2",
     "ngx-infinite-scroll": "8.0.1",
@@ -40,7 +61,27 @@
     "rxjs": "6.5.3",
     "swagger-ui-dist": "3.24.3",
     "tslib": "1.10.0",
-    "zone.js": "0.10.2"
+    "zone.js": "0.10.2",
+    "@antv/data-set": "^0.11.4",
+    "@antv/g2": "^4.0.8",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "ajv": "^6.12.2",
+    "@delon/abc": "^9.4.0",
+    "@delon/acl": "^9.4.0",
+    "@delon/auth": "^9.4.0",
+    "@delon/cache": "^9.4.0",
+    "@delon/chart": "^9.4.0",
+    "@delon/form": "^9.4.0",
+    "@delon/mock": "^9.4.0",
+    "@delon/theme": "^9.4.0",
+    "@delon/util": "^9.4.0",
+    "file-saver": "^2.0.2",
+    "ng-zorro-antd": "^9.1.2",
+    "ngx-tinymce": "^9.0.0",
+    "ngx-ueditor": "^9.0.0",
+    "screenfull": "^5.0.2",
+    "qrious": "^4.0.2"
   },
   "devDependencies": {
     "@angular/cli": "9.0.4",
@@ -101,35 +142,14 @@
     "webpack-merge": "4.2.2",
     "webpack-notifier": "1.8.0",
     "workbox-webpack-plugin": "4.3.1",
-    "write-file-webpack-plugin": "4.5.1"
+    "write-file-webpack-plugin": "4.5.1",
+    "@delon/testing": "^9.4.0",
+    "ng-alain": "^9.4.0",
+    "ng-alain-codelyzer": "^0.0.1"
   },
   "engines": {
     "node": ">=8.9.0",
     "yarn": ">=1.19.0"
-  },
-  "scripts": {
-    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,ts,css,scss,yml}\"",
-    "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "yarn run lint --fix",
-    "ngc": "ngc -p tsconfig.app.json",
-    "cleanup": "rimraf target/classes/static/{index.html,favicon.ico,manifest.webapp,robots.txt,app/,content/,swagger-ui/} target/classes/aot",
-    "clean-www": "rimraf target/classes/static/app/{src,target/}",
-    "start": "yarn run webpack:dev",
-    "start-tls": "yarn run webpack:dev --env.tls",
-    "serve": "yarn run start",
-    "build": "yarn run webpack:prod",
-    "test": "yarn run lint && jest --coverage --logHeapUsage -w=2 --config src/test/javascript/jest.conf.js",
-    "test:watch": "yarn run test --watch",
-    "webpack:dev": "yarn run webpack-dev-server --config webpack/webpack.dev.js --inline --hot --port=9060 --watch-content-base --env.stats=minimal",
-    "webpack:dev-verbose": "yarn run webpack-dev-server --config webpack/webpack.dev.js --inline --hot --port=9060 --watch-content-base --profile --progress --env.stats=normal",
-    "webpack:build:main": "yarn run webpack --config webpack/webpack.dev.js --env.stats=minimal",
-    "webpack:build": "yarn run cleanup && yarn run webpack:build:main",
-    "webpack:prod:main": "yarn run webpack --config webpack/webpack.prod.js --profile",
-    "webpack:prod": "yarn run cleanup && yarn run webpack:prod:main && yarn run clean-www",
-    "webpack:test": "yarn run test",
-    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
-    "update-jdl-studio": "cd src/main/resources/static/jdl-studio && git pull origin gh-pages && cd .. && git add jdl-studio && git commit -m 'jdl-studio submodule updated'"
   },
   "jestSonar": {
     "reportPath": "target/test-results/jest",
